Fix div alignments in profile page
I fix the div alignments on the profile page and also add the correct
theme of style to the buttons.

--- a/project/account/static/profile.css
+++ b/project/account/static/profile.css
@@ -5,38 +5,23 @@ body {
     margin: 0px;
     font-family: Montserrat;
     min-height: 100vh;
+    text-align: center;
+    justify-content: center;
+}
+
+.profile {
+    text-align: center;
+    justify-content: center;
 }
 
 h2 {
-    color: aliceblue;
+    color: white;
     font-size: 40px;
-    text-align: left;
 }
 
 p {
-    color: aliceblue;
-}
-
-.button a {
-    justify-content: center;
-    background: #000;
-    align-items: center;
-    transform: translateY(10%);
-    font-size: 1.5em;
-    position: relative;
-    color: aliceblue;
-    text-decoration: none;
     color: white;
-    padding: 10px 30px;
-    border: 2px solid #1e9bff;
-    transition: 0.5s;
-
-}
-
-.button a:hover {
-    letter-spacing: 0.2em;
-    background: #1e9bff;
-    box-shadow: 0 0 35px #1e9bff;
+    font-size: 20px;
 }
 
 .description {
@@ -50,37 +35,30 @@ p {
     transform: translateX(10%);
     color: #fdfdff;
     width: fit-content;
+}
+
+
+.content {
+    width: 70%;
+    margin-left: 15%;;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
 
 }
 
-.description p {
-    margin-top: 20px;
-    margin-bottom: 50px;
-    margin-left: 60px;
+.button {
+    padding: 2%;
+    text-align: center;
+    width: 20%;
+    padding: 1%;
     color: white;
-    font-size: 22px;
+    cursor: pointer;
+    border: 1px solid grey;
+    background:#51308a;
+    transition: background-color 0.5s ease;
 }
 
-.profile {
-    width: 1250px;
-    margin: 0 auto;
-}
-
-.underlining {
-    position: left;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    width: 390px;
-    border-width: 1px;
-    border-color: white;
-    border-style: solid none none none;
-}
-
-.sidelining {
-    position: left;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    border-width: 1px;
-    border-color: white;
-    border-style: none none none solid;
-}
+.button:hover {
+    background-color: #41039f;
+  }
